@@ -15,8 +15,8 @@ import org.biopax.paxtools.query.wrapperL3.DataSourceFilter;
 import org.biopax.paxtools.query.wrapperL3.Filter;
 import org.biopax.paxtools.query.wrapperL3.OrganismFilter;
 import org.biopax.paxtools.query.wrapperL3.UbiqueFilter;
-import org.junit.Ignore;
-import org.junit.Test;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 
 import java.io.FileOutputStream;
 import java.io.IOException;
@@ -25,18 +25,17 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Set;
 
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * @author Ozgun Babur
  */
 public class QueryTest
 {
-	static BioPAXIOHandler handler =  new SimpleIOHandler();
+	static final BioPAXIOHandler handler =  new SimpleIOHandler();
 
 	@Test
-	public void testQueries() throws Throwable
+	public void queries()
 	{
 		Model model = handler.convertFromOWL(QueryTest.class.getResourceAsStream(
 			"raf_map_kinase_cascade_reactome.owl"));
@@ -93,27 +92,22 @@ public class QueryTest
 		assertFalse(result.contains(check));
 		result = QueryExecuter.runNeighborhood(source, model, 3, Direction.UNDIRECTED);
 		assertTrue(result.contains(check));
-
-
-//		Model clonedModel = excise(model, result);
-//		handler.convertToOWL(clonedModel, new FileOutputStream(
-//			getClass().getResource("").getFile() + File.separator + "temp.owl"));
 	}
 
-	private Model excise(Model model, Set<BioPAXElement> result)
+	private Model excise(Set<BioPAXElement> result)
 	{
 		Completer c = new Completer(SimpleEditorMap.L3);
 
-		result = c.complete(result, model);
+		result = c.complete(result);
 
 		Cloner cln = new Cloner(SimpleEditorMap.L3, BioPAXLevel.L3.getDefaultFactory());
 
-		return cln.clone(model, result);
+		return cln.clone(result);
 	}
 
 	protected static Set<BioPAXElement> findElements(Model model, String... ids)
 	{
-		Set<BioPAXElement> set = new HashSet<BioPAXElement>();
+		Set<BioPAXElement> set = new HashSet<>();
 
 		for (String id : ids)
 		{
@@ -128,8 +122,8 @@ public class QueryTest
 	}
 	
 	@Test
-	@Ignore
-	public void testQueryPerformance() throws IOException
+	@Disabled
+	public void queryPerformance() throws IOException
 	{
 		long time = System.currentTimeMillis();
 
@@ -144,8 +138,7 @@ public class QueryTest
 		BioPAXElement s1 = model.getByID("HTTP://WWW.REACTOME.ORG/BIOPAX/48887#PROTEIN6022_1_9606");
 		BioPAXElement t1 = model.getByID("HTTP://WWW.REACTOME.ORG/BIOPAX/48887#PROTEIN6020_1_9606");
 
-		Set<BioPAXElement> source = new HashSet<BioPAXElement>();
-//		Set<BioPAXElement> target = new HashSet<BioPAXElement>();
+		Set<BioPAXElement> source = new HashSet<>();
 		source.add(s1);
 		source.add(t1);
 
@@ -157,12 +150,12 @@ public class QueryTest
 		System.out.println("result.size() = " + result.size());
 		System.out.println("milisecs = " + secs);
 
-		Model ex = excise(model, result);
+		Model ex = excise(result);
 		handler.convertToOWL(ex, new FileOutputStream("QueryResult.owl"));		
 	}
 
 	@Test
-	public void testFilters()
+	public void filters()
 	{
 		Model model = handler.convertFromOWL(this.getClass().getResourceAsStream(
 			"raf_map_kinase_cascade_reactome.owl"));
@@ -213,14 +206,14 @@ public class QueryTest
 		target = findElements(model,
 			"HTTP://WWW.REACTOME.ORG/BIOPAX/48887#SMALLMOLECULE6_1_9606"); //ADP
 
-		Set<String> ubiqueIDs = new HashSet<String>(Arrays.asList("Some ID", "Another ID"));
+		Set<String> ubiqueIDs = Set.of("Some ID", "Another ID");
 
 		result = QueryExecuter.runPathsFromTo(source, target, model, LimitType.NORMAL, 1,
 			new UbiqueFilter(ubiqueIDs));
 
 		assertTrue(!result.isEmpty());
 
-		ubiqueIDs = new HashSet<String>(Arrays.asList(
+		ubiqueIDs = new HashSet<>(Arrays.asList(
 			"HTTP://WWW.REACTOME.ORG/BIOPAX/48887#SMALLMOLECULE5_1_9606"));
 
 		result = QueryExecuter.runPathsFromTo(source, target, model, LimitType.NORMAL, 1,
